
add_subdirectory(audiosrv)
add_subdirectory(eventlog)
add_subdirectory(rpcss)
add_subdirectory(schedsvc)
add_subdirectory(spoolsv)
add_subdirectory(svchost)
add_subdirectory(tcpsvcs)
add_subdirectory(telnetd)
#add_subdirectory(tftpd)
add_subdirectory(thmsvc)
add_subdirectory(umpnpmgr)
add_subdirectory(wkssvc)
add_subdirectory(wlansvc)
add_subdirectory(wmisvc)
