
add_subdirectory(audiosrv)
add_subdirectory(dcomlaunch)
add_subdirectory(dhcpcsvc)
add_subdirectory(eventlog)
add_subdirectory(netlogon)
add_subdirectory(nfsd)
add_subdirectory(rpcss)
add_subdirectory(schedsvc)
add_subdirectory(shsvcs)
add_subdirectory(srvsvc)
add_subdirectory(svchost)
add_subdirectory(tcpsvcs)
add_subdirectory(telnetd)
add_subdirectory(tftpd)
add_subdirectory(umpnpmgr)
add_subdirectory(w32time)
add_subdirectory(wkssvc)
add_subdirectory(wlansvc)
add_subdirectory(wmisvc)
add_subdirectory(wuauserv)
