
add_subdirectory(amstream)
#add_subdirectory(bdaplgin)
#add_subdirectory(d3d8)
add_subdirectory(d3d8thk)
#add_subdirectory(d3d9)
#add_subdirectory(ddraw)
add_subdirectory(devenum)
add_subdirectory(dinput)
add_subdirectory(dinput8)
add_subdirectory(dmusic)
add_subdirectory(dplay)
#add_subdirectory(dplayx)
add_subdirectory(dsound)
#add_subdirectory(dsound_new)
add_subdirectory(dxdiagn)
#add_subdirectory(ksproxy)# undefined reference to `operator new(unsigned int)'
add_subdirectory(ksuser)
add_subdirectory(msdmo)
#add_subdirectory(msdvbnp)
#add_subdirectory(msvidctl)
add_subdirectory(qedit)
#add_subdirectory(quartz) #idl
#add_subdirectory(wine)
