
add_subdirectory(kbda1)
add_subdirectory(kbda2)
add_subdirectory(kbda3)
add_subdirectory(kbdal)
add_subdirectory(kbdarme)
add_subdirectory(kbdarmw)
add_subdirectory(kbdaze)
add_subdirectory(kbdazel)
add_subdirectory(kbdbe)
add_subdirectory(kbdbga)
add_subdirectory(kbdbgm)
add_subdirectory(kbdbgt)
add_subdirectory(kbdblr)
add_subdirectory(kbdbr)
add_subdirectory(kbdbur)
add_subdirectory(kbdcan)
add_subdirectory(kbdcr)
add_subdirectory(kbdcz)
add_subdirectory(kbdcz1)
add_subdirectory(kbdda)
add_subdirectory(kbddv)
add_subdirectory(kbdes)
add_subdirectory(kbdest)
add_subdirectory(kbdfc)
add_subdirectory(kbdfi)
add_subdirectory(kbdfr)
add_subdirectory(kbdgeo)
add_subdirectory(kbdgerg)
add_subdirectory(kbdgneo)
add_subdirectory(kbdgr)
add_subdirectory(kbdgrist)
add_subdirectory(kbdhe)
add_subdirectory(kbdheb)
add_subdirectory(kbdhu)
add_subdirectory(kbdic)
add_subdirectory(kbdinasa)
add_subdirectory(kbdinben)
add_subdirectory(kbdindev)
add_subdirectory(kbdinguj)
add_subdirectory(kbdinmal)
add_subdirectory(kbdir)
add_subdirectory(kbdit)
add_subdirectory(kbdja)
add_subdirectory(kbdkaz)
add_subdirectory(kbdko)
add_subdirectory(kbdla)
add_subdirectory(kbdlt1)
add_subdirectory(kbdlv)
add_subdirectory(kbdmac)
add_subdirectory(kbdne)
add_subdirectory(kbdno)
add_subdirectory(kbdpl)
add_subdirectory(kbdpl1)
add_subdirectory(kbdpo)
add_subdirectory(kbdro)
add_subdirectory(kbdru)
add_subdirectory(kbdru1)
add_subdirectory(kbdsg)
add_subdirectory(kbdsk)
add_subdirectory(kbdsk1)
add_subdirectory(kbdsw)
add_subdirectory(kbdtat)
add_subdirectory(kbdth0)
add_subdirectory(kbdth1)
add_subdirectory(kbdth2)
add_subdirectory(kbdth3)
add_subdirectory(kbdtuf)
add_subdirectory(kbdtuq)
add_subdirectory(kbduk)
add_subdirectory(kbdur)
add_subdirectory(kbdurs)
add_subdirectory(kbdus)
add_subdirectory(kbdusa)
add_subdirectory(kbdusl)
add_subdirectory(kbdusr)
add_subdirectory(kbdusx)
add_subdirectory(kbduzb)
add_subdirectory(kbdvntc)
add_subdirectory(kbdycc)
add_subdirectory(kbdycl)
