
add_subdirectory(acppage)
add_subdirectory(cryptext)
add_subdirectory(deskadp)
add_subdirectory(deskmon)
add_subdirectory(devcpux)
add_subdirectory(fontext)
add_subdirectory(mydocs)
add_subdirectory(netplwiz)
add_subdirectory(netshell)
add_subdirectory(ntobjshex)
add_subdirectory(sendmail)
if(NOT MSVC OR NOT ARCH STREQUAL "arm") # FIXME: CORE-17606.
add_subdirectory(shellbtrfs)
endif()
add_subdirectory(stobject)
add_subdirectory(zipfldr)
