
add_subdirectory(acledit)
add_subdirectory(aclui)
add_subdirectory(activeds)
add_subdirectory(advapi32)
add_subdirectory(advpack)
add_subdirectory(authz)
add_subdirectory(avicap32)
add_subdirectory(batt)
add_subdirectory(beepmidi)
add_subdirectory(cabinet)
add_subdirectory(cards)
add_subdirectory(cfgmgr32)
add_subdirectory(clusapi)
add_subdirectory(compstui)
add_subdirectory(credui)
add_subdirectory(crtdll)
add_subdirectory(crypt32)
add_subdirectory(cryptdll)
add_subdirectory(dbghelp)
add_subdirectory(dciman32)
add_subdirectory(dhcpcsvc)
add_subdirectory(dnsapi)
add_subdirectory(dwmapi)
add_subdirectory(faultrep)
add_subdirectory(fmifs)
add_subdirectory(fusion)
add_subdirectory(gdi32)
add_subdirectory(getuname)
add_subdirectory(hid)
add_subdirectory(httpapi)
add_subdirectory(iccvid)
add_subdirectory(icmp)
add_subdirectory(imaadp32.acm)
add_subdirectory(imagehlp)
add_subdirectory(imm32)
add_subdirectory(initpki)
add_subdirectory(iphlpapi)
add_subdirectory(itircl)
add_subdirectory(kernel32)
add_subdirectory(loadperf)
add_subdirectory(lpk)
add_subdirectory(lz32)
add_subdirectory(mapi32)
add_subdirectory(mciavi32)
add_subdirectory(mcicda)
add_subdirectory(mciqtz32)
add_subdirectory(msvcrt)
add_subdirectory(user32)
